# TikStudioEventQueueLab

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  README.md  TikStudioEventQueueLab.cpp  TikStudioEventQueueLab.h
Adapters/Simulator/: TikStudioEventSimulator.cpp  TikStudioEventSimulator.h
Adapters/TikFinity/: TikStudioTikFinityClient.cpp  TikStudioTikFinityClient.h
Adapters/TikFinity/Private/TikFinity/: TSTikFinityChatConverter.cpp  TSTikFinityDecodedUserConverter.cpp  TSTikFinityDecodedUserConverter.h  TSTikFinityFollowConverter.cpp  TSTikFinityGiftConverter.cpp  TSTikFinityJsonEventDecoder.cpp  TSTikFinityLikeConverter.cpp  TSTikFinityMappedEventFormatter.cpp  TSTikFinityMemberConverter.cpp  TSTikFinityRoomUserConverter.cpp  TSTikFinitySevenEventChecklist.cpp  TSTikFinityShareConverter.cpp
Adapters/TikFinity/Public/TikFinity/: TSTikFinityChatContracts.h  TSTikFinityChatConverter.h  TSTikFinityFollowContracts.h  TSTikFinityFollowConverter.h  TSTikFinityGiftContracts.h  TSTikFinityGiftConverter.h  TSTikFinityJsonEventDecoder.h  TSTikFinityLikeContracts.h  TSTikFinityLikeConverter.h  TSTikFinityMappedEventContracts.h  TSTikFinityMappedEventFormatter.h  TSTikFinityMemberContracts.h  TSTikFinityMemberConverter.h  TSTikFinityRoomUserContracts.h  TSTikFinityRoomUserConverter.h  TSTikFinitySevenEventChecklist.h  TSTikFinityShareContracts.h  TSTikFinityShareConverter.h
Console/: main.cpp
Core/Private/EventQueueSystem/: TSEventQueueSystemSettings.cpp  TikStudioEventQueueSystem.cpp
Core/Private/EventQueueSystem/Events/: TikStudioEventQueueSystem_Share.cpp
Core/Public/EventQueueSystem/: TSEventQueueSystemOperations.h  TSEventQueueSystemSettings.h  TSEventQueueSystemTypes.h  TikStudioEventQueueSystem.h
Host/Private/EventHost/: TSChatExecutionHost.cpp  TSEventExecutionHost.cpp
Host/Public/EventHost/: TSChatExecutionHost.h  TSEventExecutionHost.h
Pipeline/Private/EventPipeline/: TikStudioEventPipelineContracts.cpp
Pipeline/Private/EventPipeline/Coordinator/: TSEventPipelineCoordinator.cpp
Pipeline/Private/EventPipeline/Families/: TSChatFamily.cpp  TSFollowFamily.cpp  TSGiftComboFamily.cpp  TSGiftFamily.cpp  TSLikeFamily.cpp  TSLikeMilestoneFamily.cpp  TSMemberFamily.cpp  TSRoomUserFamily.cpp  TSShareFamily.cpp  TSShareMilestoneFamily.cpp
Pipeline/Private/EventPipeline/Priority/: TSCommonUserPriorityPolicy.cpp
Pipeline/Private/EventPipeline/Settings/: TSChatSemanticSettings.cpp
Pipeline/Private/EventPipeline/State/: TSChatPendingBatchIndex.cpp
Pipeline/Public/EventPipeline/: TikStudioEventPipelineContracts.h
Pipeline/Public/EventPipeline/Bindings/: TSEmissionBindingRegistry.h
Pipeline/Public/EventPipeline/Coordinator/: TSEventPipelineCoordinator.h
Pipeline/Public/EventPipeline/Families/: TSChatFamily.h  TSFollowFamily.h  TSGiftComboFamily.h  TSGiftFamily.h  TSLikeFamily.h  TSLikeMilestoneFamily.h  TSMemberFamily.h  TSRoomUserFamily.h  TSShareFamily.h  TSShareMilestoneFamily.h
Pipeline/Public/EventPipeline/Payloads/: TSChatPayload.h  TSFollowPayload.h  TSGiftComboPayload.h  TSGiftPayload.h  TSLikeMilestonePayload.h  TSLikePayload.h  TSMemberPayload.h  TSRoomUserPayload.h  TSShareMilestonePayload.h  TSSharePayload.h
Pipeline/Public/EventPipeline/Priority/: TSCommonUserPriorityPolicy.h
Pipeline/Public/EventPipeline/Processing/: TSChatProcessingCompletion.h  TSChatProcessingDispatch.h  TSFollowProcessingCompletion.h  TSFollowProcessingDispatch.h  TSGiftComboProcessingCompletion.h  TSGiftComboProcessingDispatch.h  TSGiftProcessingCompletion.h  TSGiftProcessingDispatch.h  TSLikeMilestoneProcessingCompletion.h  TSLikeMilestoneProcessingDispatch.h  TSLikeProcessingCompletion.h  TSLikeProcessingDispatch.h  TSMemberPayload.h  TSMemberProcessingCompletion.h  TSMemberProcessingDispatch.h  TSProcessingCompletion.h  TSProcessingDispatch.h  TSRoomUserProcessingCompletion.h  (+5 more)
Tests/: README.md  TSHostInfrastructureTests.cpp  TSHostTestSupport.h  TSPipelineInfrastructureTests.cpp  TSPipelineTestSupport.h  TSTestHarness.h  TSTestSuites.h  TikStudioEventHostTests.cpp  TikStudioEventPipelineTests.cpp  TikStudioEventQueueSystemTests.cpp  TikStudioTikFinityAdapterTests.cpp  TikStudioTikFinityChecklistTests.cpp  TikStudioTikFinityJsonDecoderTests.cpp  TikStudioVerticalIntegrationTests.cpp
Tests/Chat/: TSChatHostTests.cpp  TSChatPipelineTests.cpp  TSChatSemanticTests.cpp  TSChatVerticalIntegrationTests.cpp  TSTikFinityChatAdapterTests.cpp
Tests/Follow/: TSFollowHostTests.cpp  TSFollowPipelineTests.cpp  TSFollowVerticalIntegrationTests.cpp  TSTikFinityFollowAdapterTests.cpp
Tests/Gift/: TSGiftHostTests.cpp  TSGiftPipelineTests.cpp  TSGiftVerticalIntegrationTests.cpp  TSTikFinityGiftAdapterTests.cpp
Tests/GiftCombo/: TSGiftComboHostTests.cpp  TSGiftComboPipelineTests.cpp  TSGiftComboVerticalIntegrationTests.cpp
Tests/Like/: TSLikeHostTests.cpp  TSLikePipelineTests.cpp  TSLikeVerticalIntegrationTests.cpp  TSTikFinityLikeAdapterTests.cpp
Tests/LikeMilestone/: TSLikeMilestonePipelineTests.cpp
Tests/Member/: TSMemberHostTests.cpp  TSMemberPipelineTests.cpp  TSMemberVerticalIntegrationTests.cpp  TSTikFinityMemberAdapterTests.cpp
Tests/Priority/: TSCommonUserPriorityPolicyTests.cpp
Tests/RoomUser/: TSRoomUserHostTests.cpp  TSRoomUserPipelineTests.cpp  TSRoomUserVerticalIntegrationTests.cpp  TSTikFinityRoomUserAdapterTests.cpp
Tests/Share/: TSShareHostTests.cpp  TSSharePipelineTests.cpp  TSShareVerticalIntegrationTests.cpp  TSTikFinityShareAdapterTests.cpp
Tests/ShareMilestone/: TSShareMilestoneHostTests.cpp  TSShareMilestonePipelineTests.cpp  TSShareMilestoneVerticalIntegrationTests.cpp
Tools/EventScenarioRunner/: README.md  main.cpp
Tools/EventScenarioRunner/Shared/: TSEventScenarioRunner.cpp  TSEventScenarioRunner.h  TSFlowScenarioProvider.h  TSFlowScenarioRegistry.cpp  TSFlowScenarioRegistry.h  TSScenarioClock.h  TSScenarioConsole.cpp  TSScenarioConsole.h  TSScenarioContracts.h  TSScenarioReporter.cpp  TSScenarioReporter.h
Tools/TikFinitySevenEventProbe/: README.md  main.cpp
docs/: README.md
docs/history/: PROJECT_CONTEXT_BASELINE_8afa3b.md
(+16 files in other folders)
